syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.grpc.demo.proto.hellostream";
option java_outer_classname = "HelloStreamProto";

package hellostream;

service  ExampleGrpc{
    rpc getListMessage(HelloRequest) returns (stream  StudentResponse){}
    rpc getStudentList(stream HelloRequest) returns (StudentResponseList){}
    rpc BiTalk(stream StreamRequest) returns(stream StreamResponse){}
}

message HelloRequest{
    string  no = 1;
}

message StudentResponse{
    string name = 1;
    int32 age = 2;
    string city = 3;
}

message StudentResponseList{
    repeated StudentResponse studentResponse = 1;
}
message StreamRequest{
    string request_info = 1;
}

message StreamResponse{
    string response_info = 1;
}
